--- a/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/family-information/family-information.component.html
@@ -1,155 +1,233 @@
 <div class="container">
-    <h5>Familiares</h5>
-    <p-table
-      [value]="family"
-      styleClass="p-datatable-striped"
-      [tableStyle]="{ 'min-width': '60rem' }"
-    >
-      <ng-template pTemplate="header">
-        <tr>
-          <th pSortableColumn="nombreCompleto" style="width: 20%">
-            Nombre Completo <p-sortIcon field="nombreCompleto" />
-          </th>
-          <th pSortableColumn="idTipoDocumento" style="width: 20%">
-            Tipo Doc. <p-sortIcon field="idTipoDocumento" />
-          </th>
-          <th pSortableColumn="numeroDocumento" style="width: 20%">
-            No. Doc. <p-sortIcon field="numeroDocumento" />
-          </th>
-          <th pSortableColumn="idMpioExpDoc" style="width: 20%">
-            Mpio. Exp. <p-sortIcon field="idMpioExpDoc" />
-          </th>
-          <th style="width: 20%">Acciones</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-familiar>
-        <tr>
-          <td>{{ familiar.nombreCompleto }}</td>
-          <td>{{ familiar.parentescoNombre }}</td>
-          <td>{{ familiar.numeroDocumento }}</td>
-          <td>{{ familiar.idMpioExpDoc }}</td>
-          <td>
-            <button class="btn btn-warning" (click)="editarFamiliar(familiar)">
-              Editar
+  <!-- Button trigger modal -->
+  <button
+    type="button"
+    class="btn btn-primary m-2"
+    data-bs-toggle="modal"
+    data-bs-target="#exampleModal"
+  >
+    Agregar familiar
+  </button>
+  <p-table
+    [value]="family"
+    styleClass="p-datatable-striped"
+    [tableStyle]="{ 'min-width': '60rem' }"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        <th pSortableColumn="nombreCompleto" style="width: 20%">
+          Nombre Completo <p-sortIcon field="nombreCompleto" />
+        </th>
+        <th pSortableColumn="idTipoDocumento" style="width: 10%">
+          Tipo Doc. <p-sortIcon field="idTipoDocumento" />
+        </th>
+        <th pSortableColumn="numeroDocumento" style="width: 20%">
+          No. Doc. <p-sortIcon field="numeroDocumento" />
+        </th>
+        <th pSortableColumn="idMpioExpDoc" style="width: 20%">
+          Mpio. Exp. <p-sortIcon field="idMpioExpDoc" />
+        </th>
+        <th pSortableColumn="idParentesco" style="width: 20%">
+          Parentesco <p-sortIcon field="idParentesco" />
+        </th>
+        <th pSortableColumn="idGenero" style="width: 20%">
+          Género <p-sortIcon field="idGenero" />
+        </th>
+        <th pSortableColumn="fechaNacimiento" style="width: 20%">
+          Fecha Nac. <p-sortIcon field="fechaNacimiento" />
+        </th>
+        <th pSortableColumn="idNivelEducativo" style="width: 20%">
+          Nivel Educ. <p-sortIcon field="idNivelEducativo" />
+        </th>
+        <th pSortableColumn="trabaja" style="width: 20%">
+          Trabaja <p-sortIcon field="trabaja" />
+        </th>
+        <th pSortableColumn="celular" style="width: 20%">
+          Teléfono <p-sortIcon field="celular" />
+        </th>
+        <th style="width: 15%">Acciones</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-familiar>
+      <tr>
+        <td>{{ familiar.nombreCompleto }}</td>
+        <td>{{ familiar.idTipoDocumento }}</td>
+        <td>{{ familiar.numeroDocumento }}</td>
+        <td>{{ familiar.idMpioExpDoc }}</td>
+        <td>{{ familiar.idParentesco }}</td>
+        <td>{{ familiar.idGenero }}</td>
+        <td>{{ familiar.fechaNacimiento }}</td>
+        <td>{{ familiar.idNivelEducativo }}</td>
+        <td>{{ familiar.trabaja }}</td>
+        <td>{{ familiar.celular }}</td>
+        <td>
+          <button
+            class="btn btn-warning me-1 mb-1"
+            (click)="editarFamiliar(familiar)"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+          >
+            Editar
+          </button>
+          <button
+            class="btn btn-danger"
+            (click)="eliminarFamiliar(familiar.id)"
+          >
+            Eliminar
+          </button>
+        </td>
+      </tr>
+    </ng-template>
+  </p-table>
+
+  <!-- Modal -->
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+            (click)="formReset()"
+          ></button>
+        </div>
+        <form [formGroup]="familiarForm" (ngSubmit)="guardarFamiliar()">
+          <div class="modal-body">
+            <div class="row g-3">
+              <input type="hidden" formControlName="id" />
+              <div class="col-md-12">
+                <label for="nombreCompleto" class="form-label"
+                  >Nombre completo</label
+                >
+                <input
+                  formControlName="nombreCompleto"
+                  placeholder="Escribe el nombre completo"
+                  type="text"
+                  class="form-control"
+                />
+              </div>
+              <div class="col-md-6">
+                <label for="idTipoDocumento" class="form-label"
+                  >Tipo de documento</label
+                >
+                <select class="form-select" formControlName="idTipoDocumento">
+                  <option value="" disabled selected>Seleccione...</option>
+                  <option *ngFor="let type of documentTypes" [value]="type.id">
+                    {{ type.nombre }}
+                  </option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label for="numeroDocumento" class="form-label"
+                  >Número de documento</label
+                >
+                <input
+                  formControlName="numeroDocumento"
+                  placeholder="Escribe el número de documento"
+                  type="text"
+                  class="form-control"
+                />
+              </div>
+              <div class="col-md-6">
+                <label for="idMpioExpDoc" class="form-label"
+                  >Municipio de Expedición del documento</label
+                >
+                <input
+                  formControlName="idMpioExpDoc"
+                  type="text"
+                  class="form-control"
+                />
+              </div>
+              <div class="col-md-6">
+                <label for="idParentesco" class="form-label">Parentesco</label>
+                <select class="form-select" formControlName="idParentesco">
+                  <option value="" disabled selected>Seleccione...</option>
+                  <option *ngFor="let type of relationships" [value]="type.id">
+                    {{ type.nombre }}
+                  </option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label for="idGenero" class="form-label">Género</label>
+                <select class="form-select" formControlName="idGenero">
+                  <option value="" disabled selected>Seleccione...</option>
+                  <option *ngFor="let type of genders" [value]="type.id">
+                    {{ type.nombre }}
+                  </option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label for="fechaNacimiento" class="form-label"
+                  >Fecha de nacimiento</label
+                >
+                <input
+                  formControlName="fechaNacimiento"
+                  type="date"
+                  class="form-control"
+                />
+              </div>
+              <div class="col-md-6">
+                <label for="idNivelEducativo" class="form-label"
+                  >Nivel educativo</label
+                >
+                <select class="form-select" formControlName="idNivelEducativo">
+                  <option value="" disabled selected>Seleccione...</option>
+                  <option
+                    *ngFor="let type of educationLevels"
+                    [value]="type.id"
+                  >
+                    {{ type.nombre }}
+                  </option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label for="trabaja" class="form-label">¿Trabaja?</label>
+                <select class="form-select" formControlName="trabaja">
+                  <option value="" disabled selected>Seleccione...</option>
+                  <option value="SI">Sí</option>
+                  <option value="NO">No</option>
+                </select>
+              </div>
+              <div class="col-md-6">
+                <label for="celular" class="form-label"
+                  >Número de celular</label
+                >
+                <input
+                  formControlName="celular"
+                  type="text"
+                  class="form-control"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              class="btn btn-secondary"
+              type="button"
+              (click)="cancelarEdicion()"
+              *ngIf="editMode"
+              data-bs-dismiss="modal"
+            >
+              Cancelar
             </button>
             <button
-              class="btn btn-danger"
-              (click)="eliminarFamiliar(familiar.id)"
+              class="btn btn-primary"
+              type="submit"
             >
-              Eliminar
+              {{ editMode ? "Actualizar" : "Agregar" }}
             </button>
-          </td>
-        </tr>
-      </ng-template>
-    </p-table>
-
-  <h5 class="mt-3">Agregar familiar</h5>
-  <form [formGroup]="familiarForm" (ngSubmit)="guardarFamiliar()">
-    <div class="row g-3">
-      <input type="hidden" formControlName="id" />
-      <div class="col-md-6">
-        <label for="nombreCompleto" class="form-label">Nombre completo</label>
-        <input
-          formControlName="nombreCompleto"
-          placeholder="Escribe el nombre completo"
-          type="text"
-          class="form-control"
-        />
-      </div>
-      <div class="col-md-6">
-        <label for="idTipoDocumento" class="form-label"
-          >Tipo de documento</label
-        >
-        <select class="form-select" formControlName="idTipoDocumento">
-          <option value="" disabled>Seleccione...</option>
-          <option *ngFor="let type of documentTypes" [value]="type.id">
-            {{ type.nombre }}
-          </option>
-        </select>
-      </div>
-      <div class="col-md-6">
-        <label for="numeroDocumento" class="form-label"
-          >Número de documento</label
-        >
-        <input
-          formControlName="numeroDocumento"
-          placeholder="Escribe el número de documento"
-          type="text"
-          class="form-control"
-        />
-      </div>
-      <div class="col-md-6">
-        <label for="idMpioExpDoc" class="form-label"
-          >Municipio de Expedición del documento</label
-        >
-        <input
-          formControlName="idMpioExpDoc"
-          type="text"
-          class="form-control"
-        />
-      </div>
-      <div class="col-md-6">
-        <label for="idParentesco" class="form-label">Parentesco</label>
-        <select class="form-select" formControlName="idParentesco">
-          <option value="" disabled>Seleccione...</option>
-          <option *ngFor="let type of relationships" [value]="type.id">
-            {{ type.nombre }}
-          </option>
-        </select>
-      </div>
-      <div class="col-md-6">
-        <label for="idGenero" class="form-label">Género</label>
-        <select class="form-select" formControlName="idGenero">
-          <option value="" disabled>Seleccione...</option>
-          <option *ngFor="let type of genders" [value]="type.id">
-            {{ type.nombre }}
-          </option>
-        </select>
-      </div>
-      <div class="col-md-6">
-        <label for="fechaNacimiento" class="form-label"
-          >Fecha de nacimiento</label
-        >
-        <input
-          formControlName="fechaNacimiento"
-          type="date"
-          class="form-control"
-        />
-      </div>
-      <div class="col-md-6">
-        <label for="idNivelEducativo" class="form-label">Nivel educativo</label>
-        <select class="form-select" formControlName="idNivelEducativo">
-          <option value="" disabled>Seleccione...</option>
-          <option *ngFor="let type of educationLevels" [value]="type.id">
-            {{ type.nombre }}
-          </option>
-        </select>
-      </div>
-      <div class="col-md-6">
-        <label for="trabaja" class="form-label">¿Trabaja?</label>
-        <select class="form-select" formControlName="trabaja">
-          <option value="" disabled>Seleccione...</option>
-          <option value="SI">Sí</option>
-          <option value="NO">No</option>
-        </select>
-      </div>
-      <div class="col-md-6">
-        <label for="celular" class="form-label">Número de celular</label>
-        <input formControlName="celular" type="text" class="form-control" />
-      </div>
-      <div class="d-grid gap-2">
-        <button class="btn btn-primary" type="submit">
-          {{ editMode ? "Actualizar" : "Agregar" }}
-        </button>
-        <button
-          class="btn btn-secondary"
-          type="button"
-          (click)="cancelarEdicion()"
-          *ngIf="editMode"
-        >
-          Cancelar
-        </button>
+          </div>
+        </form>
       </div>
     </div>
-  </form>
+  </div>
 </div>
