--- a/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
+++ b/front/src/app/components/private/user/components/user-info/components/natural-person/natural-person.component.html
@@ -21,29 +21,23 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="fechaExpDoc" class="form-label"
-            >Fecha de expedición de documento</label
-          >
+          <label for="fechaExpDoc" class="form-label">Fecha de expedición de documento</label>
           <input formControlName="fechaExpDoc" type="date" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="departamentoExpDoc" class="form-label"
-            >Departamento de expedición del documento</label
-          >
+          <label for="departamentoExpDoc" class="form-label">Departamento de expedición del documento</label>
           <p-autoComplete
             [suggestions]="filteredDepartments"
             (completeMethod)="filterDepartment($event)"
             field="nombre"
             placeholder="Seleccione departamento"
             formControlName="departamentoExpDoc"
-            (onSelect)="onDepartmentSelect()"
+            (onSelect)="onDepartmentSelect('departamentoExpDoc', 'mpioExpDoc')"
             [dropdown]="true"
           ></p-autoComplete>
         </div>
         <div class="col-md-6">
-          <label for="mpioExpDoc" class="form-label"
-            >Municipio de expedición del documento</label
-          >
+          <label for="mpioExpDoc" class="form-label">Municipio de expedición del documento</label>
           <p-autoComplete
             [suggestions]="filteredCities"
             (completeMethod)="filterCity($event)"
@@ -61,52 +55,24 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="fechaNacimiento" class="form-label"
-            >Fecha de nacimiento</label
-          >
-          <input
-            formControlName="fechaNacimiento"
-            type="date"
-            class="form-control"
-          />
+          <label for="fechaNacimiento" class="form-label">Fecha de nacimiento</label>
+          <input formControlName="fechaNacimiento" type="date" class="form-control" />
         </div>
         <div class="col-md-6">
           <label for="paisNacimiento" class="form-label">País de nacimiento</label>
-          <input
-            formControlName="paisNacimiento"
-            type="text"
-            class="form-control"
-          />
+          <input formControlName="paisNacimiento" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="departamentoNacimiento" class="form-label"
-            >Departamento de nacimiento</label
-          >
-          <input
-            formControlName="departamentoNacimiento"
-            type="text"
-            class="form-control"
-          />
+          <label for="departamentoNacimiento" class="form-label">Departamento de nacimiento</label>
+          <input formControlName="departamentoNacimiento" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="mpioNacimiento" class="form-label"
-            >Municipio de nacimiento</label
-          >
-          <input
-            formControlName="mpioNacimiento"
-            type="text"
-            class="form-control"
-          />
+          <label for="mpioNacimiento" class="form-label">Municipio de nacimiento</label>
+          <input formControlName="mpioNacimiento" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="otroLugarNacimiento" class="form-label"
-            >Lugar de nacimiento</label
-          >
-          <input
-            formControlName="otroLugarNacimiento"
-            type="text"
-            class="form-control"
-          />
+          <label for="otroLugarNacimiento" class="form-label">Lugar de nacimiento</label>
+          <input formControlName="otroLugarNacimiento" type="text" class="form-control" />
         </div>
       </div>
     </div>
@@ -116,29 +82,15 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="departamentoResidencia" class="form-label"
-            >Departamento de residencia</label
-          >
-          <input
-            formControlName="departamentoResidencia"
-            type="text"
-            class="form-control"
-          />
+          <label for="departamentoResidencia" class="form-label">Departamento de residencia</label>
+          <input formControlName="departamentoResidencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="mpioResidencia" class="form-label"
-            >Municipio de residencia</label
-          >
-          <input
-            formControlName="mpioResidencia"
-            type="text"
-            class="form-control"
-          />
+          <label for="mpioResidencia" class="form-label">Municipio de residencia</label>
+          <input formControlName="mpioResidencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="idZonaResidencia" class="form-label"
-            >Zona de residencia</label
-          >
+          <label for="idZonaResidencia" class="form-label">Zona de residencia</label>
           <select class="form-select" formControlName="idZonaResidencia">
             <option *ngFor="let type of zones" [value]="type.id">
               {{ type.nombre }}
@@ -146,9 +98,7 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="idTipoVivienda" class="form-label"
-            >Tipo de vivienda de residencia</label
-          >
+          <label for="idTipoVivienda" class="form-label">Tipo de vivienda de residencia</label>
           <select class="form-select" formControlName="idTipoVivienda">
             <option *ngFor="let type of houseTypes" [value]="type.id">
               {{ type.nombre }}
@@ -167,24 +117,12 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="direccionResidencia" class="form-label"
-            >Dirección de residencia</label
-          >
-          <input
-            formControlName="direccionResidencia"
-            type="text"
-            class="form-control"
-          />
+          <label for="direccionResidencia" class="form-label">Dirección de residencia</label>
+          <input formControlName="direccionResidencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="aniosAntigVivienda" class="form-label"
-            >Años de antigüedad en la vivienda de residencia</label
-          >
-          <input
-            formControlName="aniosAntigVivienda"
-            type="number"
-            class="form-control"
-          />
+          <label for="aniosAntigVivienda" class="form-label">Años de antigüedad en la vivienda de residencia</label>
+          <input formControlName="aniosAntigVivienda" type="number" class="form-control" />
         </div>
       </div>
     </div>
@@ -194,23 +132,15 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="cabezaFamilia" class="form-label"
-            >¿Es cabeza de familia?</label
-          >
+          <label for="cabezaFamilia" class="form-label">¿Es cabeza de familia?</label>
           <select class="form-select" formControlName="cabezaFamilia">
             <option value="SI">Sí</option>
             <option value="NO">No</option>
           </select>
         </div>
         <div class="col-md-6">
-          <label for="personasACargo" class="form-label"
-            >Número de personas a cargo</label
-          >
-          <input
-            formControlName="personasACargo"
-            type="number"
-            class="form-control"
-          />
+          <label for="personasACargo" class="form-label">Número de personas a cargo</label>
+          <input formControlName="personasACargo" type="number" class="form-control" />
         </div>
         <div class="col-md-6">
           <label for="tieneHijos" class="form-label">¿Tiene hijos?</label>
@@ -231,41 +161,23 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="correoElectronico" class="form-label"
-            >Correo electrónico</label
-          >
-          <input
-            formControlName="correoElectronico"
-            type="email"
-            class="form-control"
-          />
+          <label for="correoElectronico" class="form-label">Correo electrónico</label>
+          <input formControlName="correoElectronico" type="email" class="form-control" />
         </div>
         <div class="col-md-6">
           <label for="telefono" class="form-label">Número de teléfono</label>
           <br />
-          <p-inputMask
-            mask="999-9999"
-            formControlName="telefono"
-            placeholder="999-9999"
-          />
+          <p-inputMask mask="999-9999" formControlName="telefono" placeholder="999-9999"></p-inputMask>
         </div>
         <div class="col-md-6">
           <label for="celular" class="form-label">Número de celular</label>
           <br />
-          <p-inputMask
-            mask="999-999-9999"
-            formControlName="celular"
-            placeholder="999-999-9999"
-          />
+          <p-inputMask mask="999-999-9999" formControlName="celular" placeholder="999-999-9999"></p-inputMask>
         </div>
         <div class="col-md-6">
           <label for="telefonoOficina" class="form-label">Número de teléfono de oficina</label>
           <br />
-          <p-inputMask
-            mask="999-999-9999"
-            formControlName="telefonoOficina"
-            placeholder="999-999-9999"
-          />
+          <p-inputMask mask="999-999-9999" formControlName="telefonoOficina" placeholder="999-999-9999"></p-inputMask>
         </div>
       </div>
     </div>
@@ -283,24 +195,12 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="profesion" class="form-label"
-            >Profesión</label
-          >
-          <input
-            formControlName="profesion"
-            type="text"
-            class="form-control"
-          />
+          <label for="profesion" class="form-label">Profesión</label>
+          <input formControlName="profesion" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="ocupacionOficio" class="form-label"
-            >Ocupación u oficio</label
-          >
-          <input
-            formControlName="ocupacionOficio"
-            type="text"
-            class="form-control"
-          />
+          <label for="ocupacionOficio" class="form-label">Ocupación u oficio</label>
+          <input formControlName="ocupacionOficio" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
           <label for="idEmpresaLabor" class="form-label">Empresa donde labora</label>
@@ -319,54 +219,24 @@
           </select>
         </div>
         <div class="col-md-6">
-          <label for="dependenciaEmpresa" class="form-label"
-            >Dependencia a la que hace parte</label
-          >
-          <input
-            formControlName="dependenciaEmpresa"
-            type="text"
-            class="form-control"
-          />
+          <label for="dependenciaEmpresa" class="form-label">Dependencia a la que hace parte</label>
+          <input formControlName="dependenciaEmpresa" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="cargoOcupa" class="form-label"
-            >Cargo que ocupa</label
-          >
-          <input
-            formControlName="cargoOcupa"
-            type="text"
-            class="form-control"
-          />
+          <label for="cargoOcupa" class="form-label">Cargo que ocupa</label>
+          <input formControlName="cargoOcupa" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="aniosAntigEmpresa" class="form-label"
-            >Años de antigüedad en la empresa</label
-          >
-          <input
-            formControlName="aniosAntigEmpresa"
-            type="number"
-            class="form-control"
-          />
+          <label for="aniosAntigEmpresa" class="form-label">Años de antigüedad en la empresa</label>
+          <input formControlName="aniosAntigEmpresa" type="number" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="mesesAntigEmpresa" class="form-label"
-            >Meses de antigüedad en la empresa</label
-          >
-          <input
-            formControlName="mesesAntigEmpresa"
-            type="number"
-            class="form-control"
-          />
+          <label for="mesesAntigEmpresa" class="form-label">Meses de antigüedad en la empresa</label>
+          <input formControlName="mesesAntigEmpresa" type="number" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="mesSaleVacaciones" class="form-label"
-            >Mes en el que sale a vacaciones</label
-          >
-          <input
-            formControlName="mesSaleVacaciones"
-            type="text"
-            class="form-control"
-          />
+          <label for="mesSaleVacaciones" class="form-label">Mes en el que sale a vacaciones</label>
+          <input formControlName="mesSaleVacaciones" type="text" class="form-control" />
         </div>
       </div>
     </div>
@@ -376,34 +246,16 @@
     <div class="card-body">
       <div class="row g-3">
         <div class="col-md-6">
-          <label for="nombreEmergencia" class="form-label"
-            >Nombre completo</label
-          >
-          <input
-            formControlName="nombreEmergencia"
-            type="text"
-            class="form-control"
-          />
+          <label for="nombreEmergencia" class="form-label">Nombre completo</label>
+          <input formControlName="nombreEmergencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="numeroCedulaEmergencia" class="form-label"
-            >Número de documento</label
-          >
-          <input
-            formControlName="numeroCedulaEmergencia"
-            type="text"
-            class="form-control"
-          />
+          <label for="numeroCedulaEmergencia" class="form-label">Número de documento</label>
+          <input formControlName="numeroCedulaEmergencia" type="text" class="form-control" />
         </div>
         <div class="col-md-6">
-          <label for="numeroCelularEmergencia" class="form-label"
-            >Número de celular</label
-          >
-          <input
-            formControlName="numeroCelularEmergencia"
-            type="text"
-            class="form-control"
-          />
+          <label for="numeroCelularEmergencia" class="form-label">Número de celular</label>
+          <input formControlName="numeroCelularEmergencia" type="text" class="form-control" />
         </div>
       </div>
     </div>
